<resources>
    <string name="app_name">FitBox</string>
    <string name="authenticate">Open/Close Locker</string>
    <string name="close">Close Locker</string>
    <string name="title_home">Home</string>
    <string name="title_bookings">Previous bookings</string>
    <string name="title_account">Account</string>
    <string name="title_book">Book</string>
    <string name="title_settings">Settings</string>
    <string name="welcome">Welcome to FitBox</string>
    <string name="booking">Booking</string>
    <string name="toBook">Book your smart lock</string>
    <string name="parkToBook">Select a Park</string>
    <string name="inCardAct">In card activity</string>
    <string name="CalButt">Select hour</string>
    <string name="clean">Clean</string>
    <string name="profile">Your Profile</string>
    <string name="details">Details</string>
    <string name="park">Park</string>
    <string name="date">Date</string>
    <string name="back">Go Back</string>
    <string name="locker">Locker</string>
    <string name="duration">Duration</string>
    <string name="nearyouhome">Friends near you</string>
    <string name="book">Book</string>
    <string name="facebook_app_id">519075268774714</string>
    <string name="fb_login_protocol_scheme">fb519075268774714</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="signed_out">Sign Out</string>
    <string name="signed_out2">Signed Out</string>
    <string name="title_activity_card_to_book">Map</string>
    <string name="locker_main">Select your locker</string>
    <string name="booking_home">Your Booking</string>
    <string name="find_park">Find Park</string>
    <string name="leave_locker">Leave Locker</string>
    <string name="delete_booking">Delete Booking</string>
    <string name="sign_up">Sign up</string>
    <string name="create_account">Create Account</string>
    <string name="already_member">Already a member? Login</string>
    <string name="signup_link">No account yet? Create one</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="new_email">New Email</string>
    <string name="new_email_check">Confirm New Email</string>
    <string name="conf_new_email">Change Email</string>
    <string name="new_name">New Name</string>
    <string name="new_surname">New Surname</string>
    <string name="conf_new_username">Change username</string>
    <string name="new_age">New Age</string>
    <string name="new_weight">New Weight</string>
    <string name="update_profile">Update Profile</string>
    <string name="password">Password</string>
    <string name="conf_password">Re-enter Password</string>
    <string name="temp_password">Temporary Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="old_password">Enter old Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="username">Username</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="title_activity_maps">Map</string>
    <string name="Open">open drawer</string>
    <string name="Close">close drawer</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="start_train">Start Training</string>
    <string name="stop_train">Finish Training</string>

</resources>
