<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/idDateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="44dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.007"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idLockName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.007"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idDateTV" />

    <Button
        android:id="@+id/idFindParkBtn"
        android:layout_width="178dp"
        android:layout_height="51dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/bg_button"
        android:text="@string/find_park"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idLockName" />

    <Button
        android:id="@+id/idAuthButt"
        android:layout_width="178dp"
        android:layout_height="51dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_button"
        android:text="@string/authenticate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idLockName" />

    <Button
        android:id="@+id/idLeaveBtn"
        android:layout_width="178dp"
        android:layout_height="51dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/bg_button"
        android:text="@string/leave_locker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idAuthButt" />

    <Button
        android:id="@+id/idDeleteBtn"
        android:layout_width="178dp"
        android:layout_height="51dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_button"
        android:text="@string/delete_booking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idAuthButt" />

    <Button
        android:id="@+id/idStartTrainBtn"
        android:layout_width="365dp"
        android:layout_height="51dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/bg_button"
        android:text="@string/start_train"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idLeaveBtn" />

    <Button
        android:id="@+id/idStopTrainBtn"
        android:layout_width="365dp"
        android:layout_height="51dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/bg_button"
        android:text="@string/stop_train"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idStartTrainBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>