<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/logoSignup"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"
        android:src="@drawable/fitbox_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="365dp"
        android:layout_height="54dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="23dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoSignup" />

    <EditText android:id="@+id/input_password"
        android:layout_width="365dp"
        android:layout_height="54dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="23dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_email"/>

    <!-- Password Re-enter Label -->

    <EditText android:id="@+id/input_reEnterPassword"
        android:layout_width="365dp"
        android:layout_height="54dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="23dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password"
        android:hint="@string/conf_password"/>

    <!-- Signup Button -->

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="163dp"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_reEnterPassword" />

    <!-- Already member -->

    <TextView
        android:id="@+id/link_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="163dp"
        android:gravity="center"
        android:text="@string/already_member"
        android:textSize="16dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup" />


</androidx.constraintlayout.widget.ConstraintLayout>