<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="64dp"
        android:src="@drawable/fitbox_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="365dp"
        android:layout_height="54dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="23dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_logo" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="365dp"
        android:layout_height="54dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="23dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_email" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="365dp"
        android:layout_height="54dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="23dp"
        android:ems="10"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password" />

    <TextView
        android:id="@+id/link_signup"
        android:layout_width="365dp"
        android:layout_height="54dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="23dp"
        android:ems="10"
        android:gravity="center"
        android:text="@string/signup_link"
        android:textSize="16dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rememberBox" />

    <TextView
        android:id="@+id/link_forgot"
        android:layout_width="365dp"
        android:layout_height="54dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="23dp"
        android:ems="10"
        android:gravity="center"
        android:text="Forgot password?"
        android:textSize="16dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/link_signup" />

    <CheckBox
        android:id="@+id/rememberBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/remember_me"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />


</androidx.constraintlayout.widget.ConstraintLayout>