<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/delete_logo"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="64dp"
        android:src="@drawable/fitbox_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText android:id="@+id/input_delete_pwd"
        android:layout_width="365dp"
        android:layout_height="54dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="23dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_logo"
        android:hint="@string/password"/>

    <EditText android:id="@+id/input_conf_delete_pwd"
        android:layout_width="365dp"
        android:layout_height="54dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="23dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_delete_pwd"
        android:hint="@string/conf_password"/>

    <Button
        android:id="@+id/btn_delete_account"
        android:layout_width="365dp"
        android:layout_height="54dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="23dp"
        android:ems="10"
        android:background="@drawable/bg_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_conf_delete_pwd"
        android:text="@string/reset_password"/>

</androidx.constraintlayout.widget.ConstraintLayout>