<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/input_new_image"
        android:layout_width="180dp"
        android:layout_height="130dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/com_facebook_profile_picture_blank_portrait"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_new_age"
        android:layout_width="365dp"
        android:layout_height="54dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="23dp"
        android:ems="10"
        android:hint="@string/new_age"
        android:textColor="@color/white"
        android:inputType="number"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_new_image" />

    <!-- Weight Label -->

    <!-- Signup Button -->

    <EditText
        android:id="@+id/input_new_weight"
        android:layout_width="365dp"
        android:layout_height="54dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="23dp"
        android:ems="10"
        android:hint="@string/new_weight"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_new_age" />

    <Button
        android:id="@+id/btn_changeProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="163dp"
        android:text="@string/update_profile"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_new_weight" />

</androidx.constraintlayout.widget.ConstraintLayout>