<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--
    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/input_image"
        android:layout_width="161dp"
        android:layout_height="149dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/com_facebook_profile_picture_blank_portrait"
        app:civ_border_color="#3f51b5"
        app:civ_border_width="4dp"
        app:civ_shadow="true"
        app:civ_shadow_color="#3f51b5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    -->

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/input_image"
        android:layout_width="180dp"
        android:layout_height="130dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/com_facebook_profile_picture_blank_portrait"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_name"
        android:layout_width="365dp"
        android:layout_height="54dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="96dp"
        android:ems="10"
        android:hint="@string/name"
        android:textColor="@color/white"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_image" />

    <EditText
        android:id="@+id/input_surname"
        android:layout_width="365dp"
        android:layout_height="54dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="23dp"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_name" />

    <!-- Weight Label -->

    <EditText
        android:id="@+id/input_age"
        android:layout_width="365dp"
        android:layout_height="54dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="23dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_surname" />

    <EditText
        android:id="@+id/input_weight"
        android:layout_width="365dp"
        android:layout_height="54dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="23dp"
        android:ems="10"
        android:hint="@string/weight"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_age" />

    <!-- Signup Button -->

    <Button
        android:id="@+id/btn_confsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="163dp"
        android:text="@string/create_account"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderRadioGroup" />

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="168dp"
        android:layout_height="30dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_weight">

        <TextView
            android:id="@+id/radioHeader"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Gender:"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioM"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:checked="true"
            android:text="M"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <RadioButton
            android:id="@+id/radioF"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:checked="false"
            android:text="F"
            android:textColor="@color/white"
            android:textSize="16dp" />


    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>